--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=SpringBoot11JPAHibernetAsociaciones
+spring.datasource.url=jdbc:postgres://localhost:5433/db_springboot
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show=true
+spring.jpa.hibernate.ddl-auto=create
